# masters-progparallel

homework/: .~lock.homework_2_KuzikDenis.odt#  homework_1_KuzikDenis.odt  homework_2_KuzikDenis.odt
labs/lab10-11/code/: compile.sh  lab10_11  lab10_11_v1  lab10_11_v2  main.cpp  main_v2.cpp
labs/lab12/: compile.bash  lab12  lab12_v1  lab12_v2  lab12_v3  lab12_v4  lab12_v4_multi  main.cpp  main_v1.cpp  main_v2.cpp  main_v3.cpp  main_v4_multi_thread.cpp  main_v4_one_thread.cpp
labs/lab4/: app  app-main.gcda  app-test_fft.gcda  compile.bash  compile_and_bench.bash  compile_and_bench_part2.bash  main.cpp  my_program  my_program_o0  my_program_o1  my_program_o2  my_program_o3  my_program_o3_unroll
labs/lab4/otchet/: lab_4_kuzik_ds.odt
labs/lab6/code/: compile_and_bench.bash  main.cpp  main__.cpp  main_pthread.cpp  my_program
labs/lab6/otchet/: .~lock.lab_6_kuzik_denis.odt#  lab6_perftest.ods  lab_6_kuzik_denis.odt
labs/lab7/: compile.bash  lab6_perftest.ods  main.cpp  main_pthread.cpp  my_program  my_program_pthread
labs/lab9/code/: compile.sh  election  main.cpp
labs/multilang_prog/cxx/cxxlib/lib/multithreaded_vectorized_aligned_optimized/: CMakeLists.txt
labs/multilang_prog/cxx/pylib/: CMakeLists.txt  python_bindings.cpp
labs/multilang_prog/cxx/pylib/cxxlib/: CMakeLists.txt
labs/multilang_prog/cxx/pylib/cxxlib/lib/: CMakeLists.txt
labs/multilang_prog/cxx/pylib/cxxlib/lib/multithreaded_vectorized_aligned_optimized/: CMakeLists.txt  multithreaded_vectorized_aligned_optimized.cpp  multithreaded_vectorized_aligned_optimized.hpp
labs/multilang_prog/cxx/pylib/cxxlib/lib/shared/: CMakeLists.txt  defs.hpp
labs/multilang_prog/cxx/pylib/cxxlib/lib/singlethreaded_nonvectorized/: CMakeLists.txt  singlethreaded_nonvectorized.cpp  singlethreaded_nonvectorized.hpp
labs/multilang_prog/cxx/pylib/cxxlib/lib/singlethreaded_nonvectorized_optimized/: CMakeLists.txt  singlethreaded_nonvectorized_optimized.cpp  singlethreaded_nonvectorized_optimized.hpp
labs/multilang_prog/cxx/pylib/cxxlib/lib/singlethreaded_vectorized_aligned_optimized/: CMakeLists.txt  singlethreaded_vectorized_aligned_optimized.cpp  singlethreaded_vectorized_aligned_optimized.hpp
labs/multilang_prog/cxx/pylib/cxxlib/lib/singlethreaded_vectorized_optimized/: CMakeLists.txt  singlethreaded_vectorized_optimized.cpp  singlethreaded_vectorized_optimized.hpp
labs/multilang_prog/cxx/pylib/cxxlib/test/: CMakeLists.txt  test.cpp
labs/multilang_prog/otchet/: .~lock.multilang_prog_otchet.odt#  multilang_prog_otchet.odt
labs/multilang_prog/python/: plot_fft_of_two_sin.py
