file(GLOB_RECURSE SHARED_HEADERS_ "./shared/*.hpp")
set(SHARED_HEADERS ${SHARED_HEADERS_} CACHE STRING "List of shared headers")

add_subdirectory(external/vector_class_lib)
add_subdirectory(shared)
add_subdirectory(singlethreaded_nonvectorized)
add_subdirectory(singlethreaded_nonvectorized_optimized)
add_subdirectory(singlethreaded_vectorized_optimized)
add_subdirectory(singlethreaded_vectorized_aligned_optimized)
add_subdirectory(multithreaded_vectorized_aligned_optimized)